# ddpm_pusht

./: README.md
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/src/: move_test.cpp  pose_subscriber.cpp
m0609_controller/: package.xml  setup.py
m0609_controller/launch/: connect_real.launch.py
m0609_controller/m0609_controller/: sub_joint.py
m0609_moveit/: .setup_assistant  package.xml
m0609_moveit/config/: joint_limits.yaml  kinematics.yaml  m0609.srdf  moveit_controllers.yaml  ros2_controllers.yaml
pusht/: package.xml  setup.py
pusht/pusht/: diffusion_policy.py  findTclass.py  findTclassimg.py  pusht_2.py
